# calculator-microservice

./: Dockerfile  README.md
calc-addition/: pyproject.toml
calc-addition/calc_addition/: main.py
calc-common/: pyproject.toml
calc-common/calc_common/: __init__.py
calc-division/: pyproject.toml
calc-division/calc_division/: main.py
calc-gateway/: pyproject.toml
calc-gateway/calc_gateway/: main.py
calc-multiplication/: pyproject.toml
calc-multiplication/calc_multiplication/: main.py
calc-subtraction/: pyproject.toml
calc-subtraction/calc_subtraction/: main.py
examples/: multiplication_with_addition.json  nested_addition.json  simple_addition.json  simple_multiplication.json
