[tool.poetry]
name = "calc-common"
version = "0.1.0"
description = ""
authors = ["Tin Man <tinman@learn-to-code.club>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
